src/components/iep/Iep.module.css
.goalBox {
  display: flex;
  justify-content: space-between;
}

.goalTab {
  margin-left: -24px;
  display: inline-flex;
  padding: 16px;
  flex-direction: column;
  align-items: center;
  gap: 8px;
  border-radius: 8px 8px 0px 0px;
  background: #FFF;
}

.goalsContainer {
  background-color: #ffffff;
  padding-bottom: 2rem;
  min-height: 50vh;
  max-height: 70vh;
  overflow-y: auto;
  border-radius: 0px 10px 10px 10px;
}

.goalsColumn {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  width: 100%;
}

.noGoalBox {
  position: relative;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.noGoalText {
  margin-bottom: 1rem;
  font-size: xx-large;
}

.noGoalTextSmall {
  margin-bottom: 1rem;
}

/* currently unused, replaced by button.primary */
.addGoalButton {
  display: inline-flex;
  height: 36px;
  padding: 8px;
  justify-content: center;
  align-items: center;
  gap: 8px;
  flex-shrink: 0;
  border-radius: 8px;
  background: var(--system-primary-primary-20159-e, #20159E);

  color: var(--system-primary-on-primary-ffffff, #FFF);
  text-align: center;
  /* Button */
  font-family: Quicksand;
  font-size: 16px;
  font-style: normal;
  font-weight: 600;
  line-height: 150%; /* 24px */
}

.addGoalButton:hover {
  cursor: pointer;
}

.addGoalFormContainer {
  border-left: 1px #D6DDE1 solid;
  padding: 2rem;
}

.addGoalFormHeading {
  color: #021426;
  font-size: 24px;
  font-family: Quicksand;
  font-weight: 600;
  line-height: 24px;
  word-wrap: break-word;
  margin-bottom: 2rem;

}

.addGoalFormTextArea {
  display: flex;
  height: 128px;
  width: 100%;
  padding: 16px;
  align-items: flex-start;
  gap: 8px;
  align-self: stretch;
  border-radius: 8px;
  background: #F5F5F5;
  resize: none;
}

.listGoal {
  border-bottom: 1px solid #D6DDE1;
}

.listGoal :hover {
  cursor: pointer;
  background-color: lightgray;
}

